# React-chat

./: Makefile  README.md  package.json
deployment/: docker-compose.yaml
deployment/migrations/00000001_mongooseim/: down.sql  up.sql
deployment/mongooseim/: auth.pem  mongooseim.toml
scripts/: .env_local
server/: Cargo.toml
server/src/: main.rs  messaging.rs  utils.rs
src/: App.css  App.js
src/chat/: ChatBox.js  ChatWindow.js  Header.js  LoadingProgress.js  Message.js  Messages.js  UserInput.js
src/chat/css/: ChatBox.css  ChatWindow.css  Header.css  Message.css  MessageHistory.css
web/: package.json
web/src/: App.css  App.js  ChatList.js  CreateChatRoom.js  config.js
web/src/chat/: ChatBox.js  ChatList.js  ChatWindow.js  Header.js  Messages.js  UserInput.js
web/src/chat/css/: Chat.css  UserInput.css
web/src/components/: ChatList.js  CreateRoom.js
web/src/utils/: chatMachineStart.js  utils.js
