[package]
name = "server"
version = "0.1.0"
authors = ["neil399399 <neil399399@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "messager-rs"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix-web-httpauth = "0.4.2"
actix-files = "0.2.2"
actix-multipart = "0.2.0"
actix-cors = "0.2.0"
actix-service = "1.0.5"
actix-threadpool = "0.3.3"
reqwest = { version = "0.10", features = ["json"] }
diesel = { version = "1.3.3", features = ["postgres", "uuid", "r2d2"] }
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

structopt = "0.3.15"
app_dirs = "1.2.1"
log = "0.4.11"
env_logger = "0.7"
chrono = { version = "0.4.13" }
ansi_term = "0.12.1"
validator = "0.10"
validator_derive = "0.10"